<resources>
    <string name="app_name">CEO</string>
    <string name="btn_move_mode">移动模式</string>
    <string name="btn_test_mode">测试模式</string>
    <string name="btn_game_mode">比赛模式</string>
    <string name="btn_setting">参数设置</string>
    <string name="setting_title_color">颜色</string>
    <string name="setting_title_R">R</string>
    <string name="setting_title_G">G</string>
    <string name="setting_title_B">B</string>
    <string name="setting_title_check">确定</string>
    <string name="setting_color_black">黑</string>
    <string name="setting_color_white">白</string>
    <string name="setting_color_red">红</string>
    <string name="setting_color_blue">蓝</string>
    <string name="setting_color_yellow">黄</string>
    <string name="setting_color_green">绿</string>
    <string name="setting_color_check">确定</string>
    <string name="setting_color_show">预览</string>
    <string name="btn_find_black">黑色轮廓</string>
    <string name="btn_find_white">白色轮廓</string>
    <string name="btn_find_red">红色轮廓</string>
    <string name="btn_find_blue">蓝色轮廓</string>
    <string name="btn_find_yellow">黄色轮廓</string>
    <string name="btn_find_green">绿色轮廓</string>
    <string name="btn_move_up">上</string>
    <string name="btn_move_down">下</string>
    <string name="btn_move_left">左</string>
    <string name="btn_move_right">右</string>
    <string name="item_black">设置黑色</string>
    <string name="item_white">设置白色</string>
    <string name="item_red">设置红色</string>
    <string name="item_blue">设置蓝色</string>
    <string name="item_yellow">设置黄色</string>
    <string name="item_green">设置绿色</string>
    <string name="item_done">设置完成</string>
</resources>
