<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/setting_title_color"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/setting_title_R"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/setting_title_G"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/setting_title_B"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
        <TextView
            android:layout_height="wrap_content"
            android:text="@string/setting_title_check"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_black"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/black_r"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/black_g"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/black_b"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <Button
            android:id="@+id/black_check"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_check"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_white"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/white_r"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/white_g"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/white_b"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <Button
            android:id="@+id/white_check"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_check"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_red"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/red_r"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/red_g"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/red_b"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <Button
            android:id="@+id/red_check"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_check"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_blue"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/blue_r"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/blue_g"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/blue_b"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <Button
            android:id="@+id/blue_check"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_check"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_yellow"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/yellow_r"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/yellow_g"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/yellow_b"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <Button
            android:id="@+id/yellow_check"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_check"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_green"
            android:textSize="@dimen/setting_title_size"
            android:gravity="center_horizontal"
            />
        <EditText
            android:id="@+id/green_r"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/green_g"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <EditText
            android:id="@+id/green_b"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            />
        <Button
            android:id="@+id/green_check"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_color_check"
            />
    </TableRow>

</TableLayout>